--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -49,15 +49,17 @@
 }
 
 .page__content {
-  #about-me{
+  #about-me,
+  #team {
     margin-top: -10em;
-      &:before { 
-        content: ''; 
-        display: block; 
-        position: relative; 
-        width: 0; 
-        height: 10em; 
-        margin-top: -10em;
+
+    &:before {
+      content: '';
+      display: block;
+      position: relative;
+      width: 0;
+      height: 10em;
+      margin-top: -10em;
     }
   }
   h1 {
@@ -115,6 +117,47 @@
   blockquote + .small {
     margin-top: -1.5em;
     padding-left: 1.25rem;
+  }
+
+  .team-section {
+    margin: 1.25rem 0 2.25rem;
+  }
+
+  .team-group + .team-group {
+    margin-top: 1.5rem;
+  }
+
+  .team-group__title {
+    margin: 0 0 0.5rem;
+    font-size: $type-size-4;
+    font-weight: 600;
+  }
+
+  .team-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.4rem 0.75rem;
+  }
+
+  .team-list__item {
+    padding: 0.35rem 0.75rem;
+    border: 1px solid mix($border-color, $light-gray, 60%);
+    border-radius: $border-radius;
+    background: mix(#fff, $background-color, 75%);
+    font-size: $type-size-6;
+    font-weight: 600;
+    color: mix(#000, $text-color, 10%);
+  }
+
+  .team-list__note {
+    display: block;
+    margin-top: 0.15rem;
+    font-weight: normal;
+    font-size: $type-size-7;
+    color: mix(#000, $text-color, 35%);
   }
 }
 
