Update _page.scss map

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -251,6 +251,21 @@
     font-size: $type-size-6;
     color: mix(#000, $text-color, 10%);
   }
+
+  .visitor-map {
+    margin: 2.5rem auto 0;
+    padding: 1.5rem;
+    border: 1px solid $border-color;
+    border-radius: $border-radius;
+    max-width: 520px;
+    background: mix(#fff, $background-color, 92%);
+    box-shadow: 0 12px 24px -22px rgba(#000, 0.3);
+    text-align: center;
+
+    > div {
+      margin: 0 auto;
+    }
+  }
 }
 
 .page__hero {
