--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -253,7 +253,7 @@
   }
 
   .visitor-map {
-    margin: 2.5rem auto 0;
+    margin: .5rem auto 0;
     padding: 1.5rem;
     border: 1px solid $border-color;
     border-radius: $border-radius;
